#revision 1232
	ctapmex 12.01.2010 17:29
	1. Для "Reload" и "Reload all" используется функция FarEditorSet::TestLoadBase . Она использует локальные переменные
		для теста базы. За счет чего не портятся FarEditorSet.parserFactory и другие, что раньше требовало перезагрузку базы.
	2. Небольшой рефакторинг - выделение кода в отдельные функции
	3. переделка r1220 пункт 3. Итог
		а) если плагин отключен, то при загрузке имя цветовой схемы пишится без описания.
		б) "Reload" тестирует возможность загрузки catalog.xml и цветовой схемы, основываясь на данных что отображены в окне настроек,
			реестр игнорируется. При ошибке загрузки не отключает плагин.
		в) "Reload all" в начале вызывает "Reload", а потом тестирует оставшиеся схемы.
		г) При закрытии настроек по "Ок" базы перезагружаются только при смене цветовой схемы или пути до catalog.xml.

#revision 1231
	ctapmex 12.01.2010 11:21
	1. конец запаркам с String и DString - переход на SString  ;)
	2. перевод комментариев в коде на англ.
	3. changelog перевел в UTF8, надеюсь в транке будет нормально отображаться

#revision 1220
	ctapmex 10.01.2010 22:29
	1. свежий взгляд на r1201, убрал malloc в пользу new
	2. ошибка при отмене выбора цветовой схемы. ( ох уж эти String и DString, запарился с ними за последние 3 дня :-) )
	3. сценарий работы окна настроек
		а) если плагин отключен, то при загрузке имя цветовой схемы пишится без описания.
		б) "Reload" тестирует возможность загрузки catalog.xml и цветовой схемы, основываясь на данных что отображены в окне настроек,
			реестр игнорируется. При ошибке загрузки не отключает плагин.
		в) "Reload all" в начале вызывает "Reload", а потом тестирует оставшиеся схемы.
    г) При закрытии настроек по "Ок" мы перегружаем базы всегда.
	!из-за этого создадим пункт в меню для перезагрузки базы.
		д) при закрытии по "Cancel" перегружаем базы если были нажатия на "Reload"
	4. поправлены файлы помощи и языковые файлы pcolorer2 для отражения пункта 3 