@@ -1,3 +1,8 @@
+#revision 1233
+	ctapmex 12.01.2010 19:37
+	1. поправил файлы бибилиотеки zlib на оригинальные , в некоторые когда то затисались id после попытки компиляции в gcc
+	2. JARInputSource::openStream - утечки памяти при возникновении ошибок. Например не найден файл в архиве.
+
 #revision 1232
 	ctapmex 12.01.2010 17:29
 	1. Для "Reload" и "Reload all" используется функция FarEditorSet::TestLoadBase . Она использует локальные переменные
